gitops-repo/applications/rag-document-qa/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: rag-service
  namespace: rag
  labels:
    app: rag-document-qa

spec:
  selector:
    app: rag-document-qa
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  type: ClusterIP
